crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_fields.snap
---
source: crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: item
---
{
  "data": {
    "checkpoints": {
      "node": {
        "sequenceNumber": "[seq]",
        "digest": "[digest]",
        "contentDigest": "[contentDigest]",
        "timestamp": "[timestamp]",
        "networkTotalTransactions": "[networkTotalTransactions]",
        "rollingGasSummary": {
          "computationCost": 0,
          "storageCost": 0,
          "storageRebate": 0,
          "nonRefundableStorageFee": 0
        },
        "epoch": {
          "epochId": 0
        },
        "validatorSignatures": {
          "signature": "[signature]",
          "signersMap": [
            0
          ]
        }
      }
    }
  }
}
