crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_transactions.snap
---
source: crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: item
---
{
  "data": {
    "checkpoints": {
      "node": {
        "sequenceNumber": "[seq]",
        "transactions": {
          "nodes": [
            {
              "digest": "[digest]",
              "sender": {
                "address": "[address]"
              },
              "gasInput": {
                "gasBudget": "5000000000"
              },
              "effects": {
                "status": "SUCCESS",
                "balanceChanges": {
                  "nodes": [
                    {
                      "amount": "1000",
                      "coinType": {
                        "repr": "[pkg]::rtd::RTD"
                      },
                      "owner": {
                        "address": "[address]"
                      }
                    },
                    {
                      "amount": "-2977000",
                      "coinType": {
                        "repr": "[pkg]::rtd::RTD"
                      },
                      "owner": {
                        "address": "[address]"
                      }
                    }
                  ]
                }
              }
            }
          ]
        }
      }
    }
  }
}
