crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_transactions_pagination_last.snap
---
source: crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: item
---
{
  "data": {
    "checkpoints": {
      "node": {
        "sequenceNumber": "[seq]",
        "transactions": {
          "nodes": [
            {
              "digest": "[digest]",
              "effects": {
                "status": "SUCCESS",
                "balanceChanges": {
                  "nodes": [
                    {
                      "amount": "100",
                      "coinType": {
                        "repr": "[pkg]::rtd::RTD"
                      }
                    },
                    {
                      "amount": "-2976100",
                      "coinType": {
                        "repr": "[pkg]::rtd::RTD"
                      }
                    }
                  ]
                }
              }
            }
          ],
          "edges": [
            {
              "cursor": "[cursor]"
            }
          ],
          "pageInfo": {
            "hasNextPage": false,
            "hasPreviousPage": true
          }
        }
      }
    }
  }
}
